<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="243dp"
        android:layout_height="71dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/cmcc" />

    <LinearLayout
        android:id="@+id/login_username"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_login_input_ok"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo">

        <ImageView
            android:id="@+id/login_username_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/ic_login_username" />

        <view
            class="android.support.design.widget.CoordinatorLayout"
            id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:background="#dededf" />

        <!--android:ems属性表示设置字符个数-->
        <EditText
            android:id="@+id/login_username_edittext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:ems="15"
            android:focusable="true"
            android:hint="@string/login_input_username_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_pwd"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_login_input_ok"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username">

        <ImageView
            android:id="@+id/login_pwd_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/ic_login_password" />

        <view
            class="android.support.design.widget.CoordinatorLayout"
            id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:background="#dededf" />

        <EditText
            android:id="@+id/login_pwd_edittext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:ems="15"
            android:focusable="true"
            android:hint="@string/hint_password" />

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_login_submit"
        android:elevation="0dp"
        android:outlineProvider="none"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18"
        app:layout_constraintEnd_toEndOf="@+id/login_pwd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/login_pwd"
        app:layout_constraintTop_toBottomOf="@+id/login_pwd"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@drawable/ic_selector_checkbox"
            android:checked="true"
            android:contentDescription="@null"
            android:textColor="@color/text_secondary_color"
            android:textSize="@dimen/font_12"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/login_hold_hint"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/login_forget_hint"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>